Bug 431098 - [dockers] The list of dockers shuffles itself every sessions
Summary: [dockers] The list of dockers shuffles itself every sessions
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (show other bugs)
Version: 4.4.1
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-01-03 10:58 UTC by David REVOY
Modified: 2021-01-05 10:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments
Screenshot of the list on two different sessions (colors and frame underlines visually the shuffling). (385.02 KB, image/png)
2021-01-03 10:58 UTC, David REVOY
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2021-01-03 10:58:44 UTC
Created attachment 134503 [details]
Screenshot of the list on two different sessions (colors and frame underlines visually the shuffling).

Hi,

The list that appears after a right-click on the header of a docker shuffles itself in between Krita sessions. I always saw this list wasn't alphabetically sorted; but I always thought it had a sort of "sorting by loading" consistent in its own way... But no (see the attachement, screenshot between two sessions).The list shuffle itself in between all Krita sessions.

To reproduce:
=============
1. Open Krita, open a document (to unlock the GUI).
2. Right click on the header of a docker (eg. Advanced Color Selector or Brush Presets)
3. A list appears with proposal of other dockers windows to activate/desactivate.
4. Check how sorted the element of this list are.
5. Close Krita, restart Krita and repeat (1), (2), (3), (4) and compare. (screenshot in attachement)

Result:
=======
The list of dockers shuffles between Krita sessions.

Wish:
=====
Get alphabetical sorted name of dockers (as in Menu > Settings > Dockers ) or consistently sorted between sessions to make user able to learn item position. Thank you!
Comment 1 Halla Rempt 2021-01-03 11:02:24 UTC
The problem is that we don't make this list: Qt generates it for us and I wish I knew a way to turn it off.
Comment 2 David REVOY 2021-01-03 11:07:42 UTC
I see, thanks @Halla!

Don't hesitate to close this bug −it is an upstream problem− and I'll try to dust-off my Qt account and report on their system. :-) Have a great sunday!
Comment 3 Halla Rempt 2021-01-03 12:04:48 UTC
I think I've found a workaround...
Comment 4 Halla Rempt 2021-01-03 12:57:08 UTC
Git commit fa2f28cb08a6c40d32949669ad2894f4f0e239b7 by Boudewijn Rempt.
Committed on 03/01/2021 at 11:56.
Pushed by rempt into branch 'master'.

Disable the unsorted docker/toolbar popup menu in the main window

M  +5    -0    libs/ui/KisMainWindow.cpp
M  +3    -0    libs/ui/KisMainWindow.h

https://invent.kde.org/graphics/krita/commit/fa2f28cb08a6c40d32949669ad2894f4f0e239b7
Comment 5 Halla Rempt 2021-01-05 10:14:07 UTC
Git commit 9ad32c1f562110e8bb63150d2da9efed555607e1 by Halla Rempt, on behalf of Boudewijn Rempt.
Committed on 05/01/2021 at 10:13.
Pushed by rempt into branch 'krita/4.3'.

Disable the unsorted docker/toolbar popup menu in the main window
(cherry picked from commit fa2f28cb08a6c40d32949669ad2894f4f0e239b7)

M  +5    -0    libs/ui/KisMainWindow.cpp
M  +3    -0    libs/ui/KisMainWindow.h

https://invent.kde.org/graphics/krita/commit/9ad32c1f562110e8bb63150d2da9efed555607e1