Disable the unsorted docker/toolbar popup menu in the main window

BUG:431098
(cherry picked from commit fa2f28cb08a6c40d32949669ad2894f4f0e239b7)