libs/ui/KisMainWindow.cpp
@@ -614,6 +614,11 @@ KisMainWindow::~KisMainWindow()
 
 }
 
+QMenu *KisMainWindow::createPopupMenu()
+{
+    return 0;
+}
+
 QUuid KisMainWindow::id() const {
     return d->id;
 }
